Bug 415523 - "Scrollbar thumb jumps on drag start" [p=mstange@themasta.com (Markus Stange) r+sr+a1.9=roc]